Fix sidebar overflow

--- a/resources/blog.sass
+++ b/resources/blog.sass
@@ -21,7 +21,6 @@
   flex: 26.5%
 
 .blog-sidebox
-  width: 100%
   margin-bottom: 1em
 
   h3
